--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<h2 class="mt-5">JEST</h2>
+<p class="text-primary">Jest is a delightful JavaScript Testing Framework with a focus on simplicity.</p>
+<p class="text-primary">It works with projects using: Babel, TypeScript, Node, React, Angular, Vue and more!</p>
